# grillcrew

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  render.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_organization.py  0002_platform_core_organization.py  0003_core_identity_models.py  0004_refresh_token.py  0005_password_reset_token.py  0006_invitation.py  0007_club_year_season.py  0008_event_shift.py  0009_volunteer_signup.py  0010_signup_cancellation.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  dependencies.py  health.py  internal.py  invitations.py  planning.py  public.py
backend/app/cli/: __init__.py  bootstrap_admin.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/middleware/: organization_context.py
backend/app/models/: __init__.py  identity.py  organization.py  planning.py
backend/app/schemas/: __init__.py  auth.py  invitation.py  organization.py  planning.py
backend/app/services/: auth.py  invitation.py  organization_context.py  planning.py  public_signup.py  signup_confirmation.py
backend/grillcrew_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth_api.py  test_bootstrap_admin.py  test_config_settings.py  test_email_sender.py  test_event_shift_migration.py  test_health.py  test_identity_migration.py  test_identity_models.py  test_invitation_api.py  test_invitation_migration.py  test_invitation_service.py  test_password_reset_service.py  test_password_reset_token_migration.py  test_permission_guards.py  test_planning.py  test_planning_migration.py  test_public_organization.py  test_public_plan.py  test_public_signup.py  test_public_signup_service.py  test_refresh_service.py  test_refresh_token_migration.py  test_security_csrf.py  test_security_jwt.py  test_security_origins.py  test_security_password.py  test_security_rate_limit.py  test_signup_cancellation_migration.py  test_signup_confirmation.py  test_volunteer_signup_migration.py
(+144 files in other folders)
