[project]
name = "grillcrew-backend"
version = "0.1.0"
description = "GrillCrew FCTC – Backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0.30,<2.1",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "psycopg[binary]>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# ---------------------------------------------------------------------------
# Linting & Formatierung (Pendant zu ESLint/Prettier im Frontend)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (Sicherheit)
    "RUF", # ruff-eigene Regeln
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert in Tests ist erwünscht

# ---------------------------------------------------------------------------
# Typprüfung – strikt, Pendant zu "TypeScript strict" gemäss CLAUDE.md (D-021)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_explicit = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
